--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -3,7 +3,7 @@
 #
 log4j.rootLogger=INFO, out
 
-log4j.logger.ru.yandex.qatools=TRACE
+log4j.logger.ru.qatools=TRACE
 
 # CONSOLE appender not used by default
 log4j.appender.out=org.apache.log4j.ConsoleAppender
